# Gaming-Posture-Fixer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: resource.h
src/: assets.rc  main.cpp  resources.rc
